# naldom-lang

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  a.out  bad_program.md  my_program  my_program_opt  output.py  program.md  program.wasm  run.sh  wait_program.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: rust-ci.yml
crates/naldom-cli/: Cargo.toml
crates/naldom-cli/src/: main.rs
crates/naldom-core/: Cargo.toml
crates/naldom-core/src/: codegen_llvm.rs  codegen_python.rs  lib.rs  llm_inference.rs  lowering.rs  lowering_hl_to_ll.rs  parser.rs  semantic_analyzer.rs
crates/naldom-ir/: Cargo.toml
crates/naldom-ir/src/: lib.rs
crates/naldom-pkg/: Cargo.toml
crates/naldom-runtime/: Cargo.toml
crates/naldom-runtime/src/: lib.rs
docs/: README.md  roadmap.md
docs/architecture/: architecture.md
docs/development-setup/: llm-server-setup.md
llm/naldom_llm/: requirements.txt
runtime/native/: naldom_runtime.c
runtime/python/: naldom_runtime.py
runtime/wasm/: naldom_runtime.js
tests/e2e/: e2e_compiler_tests.rs
tests/unit/: naldom_core_tests.rs
vscode/: README.md  package.json
