[package]
name = "naldom-cli"
version = "0.1.0"
edition = "2024"
# Inherits most fields from workspace.package
description = "Command-line interface (CLI) for the Naldom language."

[dependencies]
naldom-core = { path = "../naldom-core" }
clap = { version = "4.5.4", features = ["derive"] }
inkwell = { version = "0.6.0", default-features = false, features = ["llvm17-0", "target-x86", "target-webassembly"] }
