[package]
name = "naldom-cli"
version = "0.1.0"
edition = "2024"
# Inherits most fields from workspace.package
description = "Command-line interface (CLI) for the Naldom language."

[dependencies]
naldom-core = { path = "../naldom-core" }
clap = { version = "4.5.4", features = ["derive"] }
inkwell = { version = "0.6.0", default-features = false, features = ["llvm17-0", "target-x86", "target-webassembly"] }
tokio = { version = "1.37.0", features = ["full"] }

# Dependencies used only for running tests and benchmarks.
[dev-dependencies]
assert_cmd = "2.0"  # For testing command-line applications
assert_fs = "1.0"   # For filesystem fixtures and assertions
predicates = "3.0"  # For writing expressive assertions
