[package]
name = "naldom-core"
version = "0.1.0"
edition = "2024"
# authors = ["The Naldom Project Contributors"] # Inherited
# license = "MIT" # Inherited
# repository = "https://github.com/ADanMan/naldom-lang" # Inherited
description = "Core compiler components for Naldom: NLD Parser, IntentGraph, Semantic Analysis, Optimization, IR Code Generation."

[dependencies]
naldom-ir = { path = "../naldom-ir" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
inkwell = { version = "0.6.0", default-features = false, features = ["llvm17-0", "target-x86", "target-webassembly"] }