[package]
name = "naldom-ir"
version = "0.1.0"
edition = "2024"
# Inherits most fields from workspace.package
description = "Common Intermediate Representation (IR) and Abstract Syntax Tree (AST) definitions for the Naldom compiler."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
