[package]
name = "naldom-runtime"
version = "0.1.0"
edition = "2024"
# Inherits most fields from workspace.package
description = "Minimal cross-platform runtime for Naldom generated code."

[lib]
crate-type = ["staticlib"]

[dependencies]
# Example: wasmtime = "19.0" # If WASM runtime is implemented directly
tokio = { version = "1.37.0", features = ["rt", "macros", "time"] }
